ChangeLog file for Endian libencloud

libencloud 0.6.X:
	- yocto: allow compilation of tests without QtGui (CONFIG += nogui)
	- build: fix header install paths, INSTALLDIR=/usr (unix), install test and config
	- test/sece: SECE_DISABLE_SERVICE by default, comment it to use external service

libencloud 0.6.2 (28/04/14):
	- Create routes not only for individual IP address but also for network [CONNECT-124]
	- Handle Switchboard fallback server [CONNECT-114]
	- api/status: new "fallback" boolean field; empty errors and need not being reemitted
	- api/setup: internal_ip => openvpn_internal_ip, fallback_openvpn_internal_ip
	- *ece: don't getCertificate if we already have a valid one;
	  fail if getInfo yields valid=false
	- sece: license is now a SystemScope QSetting; improved license handling
	- conf: user/pass vs x509 auth is configurable
	- error: new Retry object, improved handling of CodeNull vs CodeGeneric errors
	- vpn: 'client' wasn't being dumped, handle retries and timeout
	- test: scripts/vpncli.sh extensions for *ECE testing; SECE sample wip

libencloud 0.6.1 (15/04/2014):
	- custom ProxyFactory to avoid proxying localhost requests;
	  handle global proxy settings in core [CONNECT-106]
	- auth: typeFromQt(), typeToQt(), toString()
	- proxy: toString()
	- vpn: improved process failure handling; error showing Proxy + UDP not allowed;
	  added parsing from file to VpnConfig and refactoring [CONNECT-121]
	- test: added sample SECE client

libencloud 0.6 (02/04/2014):
	- major rewrite and fixes
	- renaming s/ece/libencloud
	- API: new fully async APIs

libece 0.5 (27/01/2014):
	- API: ECE-specific extensions (ECE_TYPE_SECE defined on win32)
	- SB: remove curly brackets around Qt's uuid representation
	- op_cert: CN based on CSR template value if provided (user can give a label)
	- rename: {cacert,cert,key}1 => init_{ca,cert,key},
	  {cacaert,cert,key}2 => op_{ca,cert,key}
	- bindings: fix typo in sb_conf_get_vpn_ip()