@@ -49,8 +49,12 @@ typedef QList<Param> Params;
 LIBENCLOUD_DLLSPEC QString paramsFind (const Params &params, const QString &key);
 
 // win32: COMMON_APPDATA/ORG/PRODUCT/PACKAGE
-// unix: COMMON_APPDATA/ORG/PRODUCT/PACKAGE
+// unix: DATA_PREFIX
 LIBENCLOUD_DLLSPEC QString getCommonAppDataDir (QString package = "");
+
+// win32: getCommonAppDataDir()
+// unix: LOG_PREFIX
+LIBENCLOUD_DLLSPEC QString getCommonLogDir (QString package = "");
 
 } // namespace libencloud
 
