@@ -48,13 +48,15 @@
 #ifdef Q_OS_WIN32  // relative paths - refer to src/common/config.cpp
 #  define LIBENCLOUD_EXE                ".exe"
 #  define LIBENCLOUD_ETC_PREFIX         "\\etc\\"   // => %ProgramFiles% \ LIBENCLOUD_INSTALLDIR \ etc
-#  define LIBENCLOUD_SBIN_PREFIX        "\\bin\\"  // => %ProgramFiles% \ LIBENCLOUD_PRODUCTDIR \ bin
+#  define LIBENCLOUD_SBIN_PREFIX        "\\bin\\"   // => %ProgramFiles% \ LIBENCLOUD_PRODUCTDIR \ bin
 #  define LIBENCLOUD_DATA_PREFIX        ""          // => %AppData% \ LIBENCLOUD_INSTALLDIR
+#  define LIBENCLOUD_LOG_PREFIX         ""          // => %AppData% \ LIBENCLOUD_INSTALLDIR
 #else  // unix - absolute paths
 #  define LIBENCLOUD_EXE                ""
 #  define LIBENCLOUD_ETC_PREFIX         "/etc/encloud/"
 #  define LIBENCLOUD_SBIN_PREFIX        "/usr/sbin/"
-#  define LIBENCLOUD_DATA_PREFIX        "/var/lib/encloud/"
+#  define LIBENCLOUD_DATA_PREFIX        "/var/efw/encloud/"
+#  define LIBENCLOUD_LOG_PREFIX         "/var/log/encloud/"
 #endif
 #define LIBENCLOUD_CONF_FILE            LIBENCLOUD_APP ".json"
 #define LIBENCLOUD_SERIAL_FILE          "serial"
@@ -72,6 +74,12 @@
 #define LIBENCLOUD_VPN_MGMT_HOST        LIBENCLOUD_LOCALHOST
 #define LIBENCLOUD_VPN_MGMT_PORT        1195
 #define LIBENCLOUD_VPN_VERBOSITY        2
+#ifdef Q_OS_WIN32
+#  define LIBENCLOUD_VPN_LOG_FILE         "openvpn-log.txt"
+#else
+#  define LIBENCLOUD_VPN_LOG_FILE         "openvpn.log"
+#endif
+
 #define LIBENCLOUD_RSA_BITS             1024
 
 #define LIBENCLOUD_CMD_GETINFO          "manage/commands/commands.access.cloud.getInfo"
