@@ -4,6 +4,8 @@ libencloud 0.6.X:
 	- yocto: allow compilation of tests without QtGui (CONFIG += nogui)
 	- build: fix header install paths, INSTALLDIR=/usr (unix), install test and config
 	- test/sece: SECE_DISABLE_SERVICE by default, comment it to use external service
+	- config: make all prefixes public, += logPrefix
+	- unix: /var/log/encloud for logs, /var/efw/encloud for storage  
 
 libencloud 0.6.2 (28/04/14):
 	- Create routes not only for individual IP address but also for network [CONNECT-124]
